<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.rstaak.viewModel.F51NewShopViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".market.activity.Activity6_CreateProduct"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/shopId"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/categoryId"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til1"
                    android:addTextChangeListener="@{viewModel.title}"
                    android:setError="@{viewModel.errorMessage1}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="7dp"
                    android:gravity="center|right"
                    android:hint="@string/shop_name"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title"
                        android:text="@={viewModel.title}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:gravity="center|right"
                        android:inputType="textCapSentences|textMultiLine"
                        android:scrollHorizontally="false"
                        android:singleLine="false"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til2"
                    android:addTextChangeListener="@{viewModel.description}"
                    android:setError="@{viewModel.errorMessage2}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="7dp"
                    android:gravity="center|right"
                    android:hint="@string/description"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:text="@={viewModel.description}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:gravity="center|right"
                        android:inputType="textCapSentences|textMultiLine"
                        android:scrollHorizontally="false"
                        android:singleLine="false"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til3"
                    android:addTextChangeListener="@{viewModel.address}"
                    android:setError="@{viewModel.errorMessage3}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="7dp"
                    android:gravity="center|right"
                    android:hint="@string/shop_address"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:text="@={viewModel.address}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:gravity="center|right"
                        android:inputType="textCapSentences|textMultiLine"
                        android:scrollHorizontally="false"
                        android:singleLine="false"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="7dp"
                    android:gravity="center|right"
                    android:hint="@string/shop_phone"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:gravity="center|right"
                        android:inputType="phone"
                        android:scrollHorizontally="false"
                        android:singleLine="false"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/addImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|right"
                        android:text="@string/add_image"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/shopImage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="7dp"
                    app:srcCompat="@drawable/image"
                    tools:ignore="VectorDrawableCompat" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/approve"
                    style="@style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="5"
                    android:text="@string/approve"
                    android:textSize="12sp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>