<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shopsModel"
            type="com.example.rstaak.model.f4_shop.F4ShopModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/white1"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/shopImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/image"
                    tools:ignore="VectorDrawableCompat" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".25"
                            android:gravity="center|right"
                            android:paddingRight="8dp"
                            android:text="@string/shop_name"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".25"
                            android:gravity="center|right"
                            android:paddingRight="8dp"
                            android:text="@string/description"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".25"
                            android:gravity="center|right"
                            android:paddingRight="8dp"
                            android:text="@string/address"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/like"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="bottom|center"
                            android:layout_margin="5dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight=".5"
                            app:srcCompat="@drawable/like"
                            tools:ignore="VectorDrawableCompat" />

                        <ImageView
                            android:id="@+id/view"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="bottom|center"
                            android:layout_margin="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight=".5"
                            app:srcCompat="@drawable/viewed"
                            tools:ignore="VectorDrawableCompat" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/likeNumber"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".4"
                            android:gravity="center|left"
                            android:text="1"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/viewNumber"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".5"
                            android:gravity="center|left"
                            android:text="1"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".8" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>